--- a/result.html
+++ b/result.html
@@ -7,7 +7,7 @@
   <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-  <div class="container">
+  <div class="resultcontainer">
     <h1>Result</h1>
     <p id="resulttext">Waiting for the result...</p>
     <a href="index.html" class="playagainbutton">Play Again</a>
