--- a/game.html
+++ b/game.html
@@ -7,7 +7,8 @@
   <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-  <div class="container">
+    <!-- ... (previous code) ... -->
+<div class="container">
     <h1>Choose Your Option</h1>
     <div class="choices">
       <button class="choice" onclick="playGame('rock')">Rock</button>
@@ -15,6 +16,13 @@
       <button class="choice" onclick="playGame('scissors')">Scissors</button>
     </div>
   </div>
-  <script src="script.js"></script>
+     <!-- <div class="resultcontainer" style="display: none;">
+    <h2>Result</h2>
+    <p id="resulttext">Waiting for the result...</p>
+    <a href="index.html" class="play-again-button">Play Again</a>
+  </div>
+    <script src="script.js"></script> -->
 </body>
 </html>
+
+  
