--- a/game.html
+++ b/game.html
@@ -16,12 +16,8 @@
       <button class="choice" onclick="playGame('scissors')">Scissors</button>
     </div>
   </div>
-     <!-- <div class="resultcontainer" style="display: none;">
-    <h2>Result</h2>
-    <p id="resulttext">Waiting for the result...</p>
-    <a href="index.html" class="play-again-button">Play Again</a>
-  </div>
-    <script src="script.js"></script> -->
+    
+    <script src="script.js"></script>
 </body>
 </html>
 
