--- a/result.html
+++ b/result.html
@@ -7,11 +7,11 @@
   <title>Rock Paper Scissors Game</title>
 </head>
 <body>
-    <div class="resultcontainer" style="display: none;">
-        <h2>Result</h2>
-        <p id="resulttext">Waiting for the result...</p>
-        <a href="index.html" class="play-again-button">Play Again</a>
-      </div>
-        <script src="script.js"></script>
+     <div class="resultcontainer">
+    <h2>Result</h2>
+    <div id="resulttext"></div>
+    <!-- <a href="index.html" class="play-again-button">Play Again</a> -->
+  </div>    
+  <script src="script.js"></script>
 </body>
 </html>
