--- a/game.html
+++ b/game.html
@@ -16,6 +16,11 @@
       <button class="choice" onclick="playGame('scissors')">Scissors</button>
     </div>
   </div>
+  <div class="resultcontainer">
+    <h2>Result</h2>
+    <div id="resulttext"></div>
+    <!-- <a href="index.html" class="play-again-button">Play Again</a> -->
+  </div>    
     
     <script src="script.js"></script>
 </body>
